# octave-pythonic

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .hgignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  ChangeLog  DESCRIPTION  Doxyfile  INDEX  INSTALL  INSTALL.md  Makefile  Makefile.am  NEWS.md  README  README.md  __py_struct_from_dict__.cc  __py_tests__.m  arrayobjectdefs.h  bitbucket-pipelines.yml  configure.ac  exceptions.cc  exceptions.h  oct-py-error.cc  oct-py-error.h  oct-py-eval.cc  oct-py-eval.h  oct-py-init.cc  oct-py-init.h  oct-py-object.h  oct-py-types.cc  oct-py-types.h  oct-py-util.cc  oct-py-util.h  octave_to_python.cc  octave_to_python.h  (+11 more)
@py/: py.m  subsref.m
@pyobj/: dummy.m  pyobj.m
@pyobject/: cell.m  char.m  display.m  dummy.m  fieldnames.m  methods.m  pyobject.m  struct.m  subsasgn.m  subsref.m
build-aux/: python-build-flags.py  release-create.sh  release-description-gen.py
data/: io.gitlab.mtmiller.octave-pythonic.metainfo.xml
inst/: __py_objstore_disp__.m  __py_objstore_list__.m  pythonic.m  pyversion.m
inst/@pyobject/: cell.m  dummy.m  fieldnames.m  pyobject.m  subsasgn.m  subsref.m
m4/: ax_octave.m4  ax_python_numpy.m4
package/: __init__.py  pytave.py
src/: Makefile  __py_struct_from_dict__.cc  oct-py-error.cc  oct-py-eval.cc  oct-py-eval.h  oct-py-init.h  oct-py-object.h  oct-py-types.cc  oct-py-types.h  oct-py-util.cc  oct-py-util.h  pycall.cc  pyeval.cc  pyexec.cc
test/: exceptions.py  test.py
tests/: storage.tst  types.tst
